--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
         
     </head>
     <body>
-        Chat App
+        Clicked: <span id="num"></span>
+        <button id="increment">+1</button>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/chat.js"></script>
     </body>
 </html>
