--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
         
     </head>
     <body>
-        Clicked: <span id="num"></span>
-        <button id="increment">+1</button>
+        <form id="message-form">
+            <input placeholder="Message">
+            <button>Send</button>
+        </form>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
