--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <form id="message-form">
-            <input placeholder="Message">
+            <input name="message" placeholder="Message">
             <button>Send</button>
         </form>
         <script src="/socket.io/socket.io.js"></script>
